// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleHero > renders with hero image 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <div
    data-testid="media"
  />
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="dark:text-brand-high-contrast text-brand flex flex-1 items-center gap-2 font-serif font-bold underline-offset-4"
    >
      •
      <a
        class="hover:underline"
        href="/articles/test-article"
      >
        <time
          datetime="2024-06-01T00:00:00.000Z"
        >
          June 1, 2024
        </time>
      </a>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders with populated authors showing avatar stack 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="dark:text-brand-high-contrast text-brand flex flex-1 items-center gap-2 font-serif font-bold underline-offset-4"
    >
      <div
        class="group/avatar-group *:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:[transition:margin-left_300ms_ease-out] hover:space-x-1"
        data-slot="avatar-group"
      >
        <span
          class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
          data-size="sm"
          data-slot="avatar"
        >
          <span
            class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
            data-slot="avatar-fallback"
          >
            AS
          </span>
        </span>
        <span
          class="group/avatar after:border-border relative flex size-8 shrink-0 overflow-hidden rounded-full select-none after:absolute after:inset-0 after:rounded-full after:border after:mix-blend-darken data-[size=2xl]:size-32 data-[size=lg]:size-10 data-[size=sm]:size-6 data-[size=xl]:size-24 dark:after:mix-blend-lighten"
          data-size="sm"
          data-slot="avatar"
        >
          <span
            class="bg-muted text-muted-foreground flex size-full items-center justify-center rounded-full text-sm group-data-[size=sm]/avatar:text-xs"
            data-slot="avatar-fallback"
          >
            BJ
          </span>
        </span>
      </div>
      <a
        class="hover:underline"
        href="/authors/alice-smith"
      >
        Alice Smith
      </a>
      •
      <a
        class="hover:underline"
        href="/authors/bob-jones"
      >
        Bob Jones
      </a>
      •
      <a
        class="hover:underline"
        href="/articles/test-article"
      >
        <time
          datetime="2024-06-01T00:00:00.000Z"
        >
          June 1, 2024
        </time>
      </a>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;

exports[`ArticleHero > renders without authors or hero image 1`] = `
<div
  class="relative flex flex-col gap-2 md:-mx-10 lg:-mx-32 xl:-mx-44"
>
  <h1
    class="mt-6"
  >
    Test Article
  </h1>
  <div
    class="flex flex-col gap-2 md:flex-row md:items-center md:gap-8"
  >
    <div
      class="dark:text-brand-high-contrast text-brand flex flex-1 items-center gap-2 font-serif font-bold underline-offset-4"
    >
      •
      <a
        class="hover:underline"
        href="/articles/test-article"
      >
        <time
          datetime="2024-06-01T00:00:00.000Z"
        >
          June 1, 2024
        </time>
      </a>
    </div>
  </div>
  <div
    aria-orientation="horizontal"
    class="bg-border shrink-0 data-horizontal:h-px data-horizontal:w-full data-vertical:w-px data-vertical:self-stretch"
    data-orientation="horizontal"
    data-slot="separator"
    role="separator"
  />
</div>
`;
